--- a/project_unchained/gui/templates/index.html
+++ b/project_unchained/gui/templates/index.html
@@ -1,9 +1,8 @@
 {% extends "master.html" %}
 {% block child %}
-	<div class="row">
-		<h1>Welcome {% if user %} {{ user.username }} {% endif %}</h1>
-		<div class="col-md-4 col-md-offset-4">
-			
-		</div>
-	</div>
+	{% if user.username %}
+		{% include "partials/_frontpage_auth.html" %}
+	{% else %}
+		{% include "partials/_frontpage_not_auth.html" %}
+	{% endif %}
 {% endblock %}
