--- a/project_unchained/templates/master.html
+++ b/project_unchained/templates/master.html
@@ -22,10 +22,7 @@
 				<div class="row">
 					<nav class="col-md-12">
 						{% if user.username %}
-							<ul class="nav nav-pills">
-								<li class="active"><a href="/">Home</a></li>
-								<li><a href="/accounts/logout">Logout</a></li>
-							</ul>
+							{% include "partials/_main_navigation.html" %}
 						{% else %}
 							<ul class="nav nav-pills">
 								<li class="active">
