--- a/project_unchained/templates/partials/_main_navigation.html
+++ b/project_unchained/templates/partials/_main_navigation.html
@@ -2,6 +2,13 @@
 	<li class="active">
 		<a href="/">Home</a>
 	</li>
+	<li class="dropdown">
+		<a href="#" class="dropdown-toggle" data-toggle="dropdown">Projects <b class="caret"></b></a>
+		<ul class="dropdown-menu">
+			<li><a href="#new-project">New project</a></li>
+			<li class="divider"></li>
+		</ul>
+	</li>
 	<li>
 		<a href="/accounts/logout">Logout</a>
 	</li>
